--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -287,8 +287,8 @@
       href: partner-center-portal/downloads-dashboard.md
     - name: '[評価とレビュー] ダッシュボード'
       href: partner-center-portal/ratings-reviews.md
-    - name: パートナー センターの分析の用語
-      href: partner-center-portal/faq-terminology.md
+    - name: Analytics の一般的な質問
+      href: analytics-faq.md
 - name: ポリシーと利用規約
   items:
     - name: ポリシーと利用規約について
