--- a/articles/site-recovery/toc.yml
+++ b/articles/site-recovery/toc.yml
@@ -48,6 +48,22 @@
           href: tutorial-dr-drill-azure.md
         - name: Azure にフェールオーバーする
           href: vmware-azure-tutorial-failover-failback.md
+    - name: Azure への Azure VMware Solution ディザスター リカバリー
+      items:
+        - name: Azure を準備する
+          href: avs-tutorial-prepare-azure.md
+        - name: Azure VMware Solution を準備する
+          href: avs-tutorial-prepare-avs.md
+        - name: レプリケーションを設定する
+          href: avs-tutorial-replication.md
+        - name: ディザスター リカバリー訓練を実行する
+          href: avs-tutorial-dr-drill-azure.md
+        - name: Azure にフェールオーバーする
+          href: avs-tutorial-failover.md
+        - name: VM の再保護
+          href: avs-tutorial-reprotect.md
+        - name: Azure からのフェールバック
+          href: avs-tutorial-failback.md
     - name: Azure への Hyper-V VM のディザスター リカバリー
       items:
         - name: Azure を準備する
@@ -160,7 +176,7 @@
           href: hyper-v-vmm-secondary-support-matrix.md
         - name: Hyper-V VM からセカンダリ サイトへのアーキテクチャ
           href: hyper-v-vmm-architecture.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
