--- a/articles/confidential-computing/TOC.yml
+++ b/articles/confidential-computing/TOC.yml
@@ -69,7 +69,7 @@
     - name: Confidential Computing のコンソーシアム
       href: 'https://confidentialcomputing.io/'
     - name: Azure 上の仮想マシン
-      href: 'https://docs.microsoft.com/azure/virtual-machines/'
+      href: ../virtual-machines/index.yml
     - name: 価格
       href: 'https://azure.microsoft.com/en-us/pricing/details/virtual-machines/linux/#DC1s-C8s%20v2'
     - name: リージョン
