--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: 0c518e3233773f02db1fff13af9201a9370b82ec
-  ms.sourcegitcommit: 22da82c32accf97a82919bf50b9901668dc55c97
+  ms.openlocfilehash: b758aaf1d71dd0136ed3390feb981d5e360abf7d
+  ms.sourcegitcommit: 04fb3a2b272d4bbc43de5b4dbceda9d4c9701310
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/08/2020
-  ms.locfileid: "94363682"
+  ms.lasthandoff: 11/12/2020
+  ms.locfileid: "94565689"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -34,7 +34,7 @@ highlightedContent:
     url: ./cognitive-services-and-machine-learning.md
   - title: Cognitive Services のオンプレミス コンテナー
     itemType: concept
-    url: ./cognitive-services-container-support.md
+    url: ./containers/index.yml
   - title: データベースでの Cognitive Services
     itemType: concept
     url: ./big-data/cognitive-services-for-big-data.md
