--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -46,7 +46,7 @@
           href: tutorial-alias-rr.md
 - name: 概念
   items:
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -151,7 +151,7 @@
         - name: Ruby
           href: 'https://www.rubydoc.info/gems/azure_mgmt_dns/0.8.0'
         - name: Python
-          href: 'https://azure.github.io/azure-sdk-for-python/ref/DNS.html'
+          href: 'https://azure.github.io/azure-sdk-for-python/dns.html'
         - name: REST
           href: /rest/api/dns/
         - name: Resource Manager テンプレート
