--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -56,7 +56,7 @@
           href: database-encryption-at-rest.md
         - name: サービス タグ
           href: ../virtual-network/service-tags-overview.md?toc=/azure/cosmos-db/toc.json&bc=/azure/cosmos-db/breadcrumb/toc.json
-        - name: ロールベースのアクセス制御
+        - name: Azure ロールベースのアクセス制御
           displayName: rbac
           href: role-based-access-control.md
         - name: Azure Policy のサポート
