--- a/articles/security/benchmarks/TOC.yml
+++ b/articles/security/benchmarks/TOC.yml
@@ -93,6 +93,8 @@
       href: ../../devtest-labs/security-baseline.md
     - name: Azure Firewall のセキュリティ ベースライン
       href: ../../firewall/security-baseline.md
+    - name: Azure Front Door のセキュリティ ベースライン
+      href: ../../frontdoor/security-baseline.md
     - name: Azure Functions のセキュリティ ベースライン
       href: ../../azure-functions/security-baseline.md
     - name: Azure IoT Hub のセキュリティ ベースライン
@@ -139,6 +141,8 @@
       href: ../../container-registry/security-baseline.md
     - name: Cosmos DB のセキュリティ ベースライン
       href: ../../cosmos-db/security-baseline.md
+    - name: Cost Management のセキュリティ ベースライン
+      href: ../../cost-management-billing/security-baseline.md
     - name: カスタマー ロックボックスのセキュリティ ベースライン
       href: ../fundamentals/customer-lockbox-security-baseline.md
     - name: Data Lake Analytics のセキュリティ ベースライン
