--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -283,13 +283,13 @@
           href: storage-troubleshoot-windows-file-connection-problems.md
         - name: Azure Files のトラブルシューティング - Linux (SMB)
           href: storage-troubleshoot-linux-file-connection-problems.md
-        - name: Azure Files のパフォーマンスに関するトラブルシューティング
+        - name: Azure ファイル共有のパフォーマンスのトラブルシューティング
           href: storage-troubleshooting-files-performance.md
         - name: Azure Files のトラブルシューティング - Linux (NFS)
           href: storage-troubleshooting-files-nfs.md
         - name: Azure File Sync のトラブルシューティング
           href: storage-sync-files-troubleshoot.md
-        - name: Azure Files の削除に関するトラブルシューティング
+        - name: Azure ファイル共有の削除に関するトラブルシューティング
           href: storage-troubleshoot-cannot-delete-files-azure-file-share.md
         - name: ファイル共有のバックアップに関するトラブルシューティング
           href: ../../backup/troubleshoot-azure-files.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
