--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -100,7 +100,7 @@
         - name: Azure File Sync のデプロイ
           href: storage-sync-files-deployment-guide.md
         - name: Premium ファイル共有を使用した SQL Server FCI
-          href: ../../virtual-machines/windows/sql/virtual-machines-windows-portal-sql-create-failover-cluster-premium-file-share.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+          href: ../../azure-sql/virtual-machines/windows/failover-cluster-instance-premium-file-share-manually-configure.md?toc=%252fazure%252fstorage%252ffiles%252ftoc.json
     - name: マウントする
       items:
         - name: Windows への SMB ファイル共有のマウント
@@ -311,7 +311,7 @@
     - name: Azure File Sync のリリース ノート
       href: storage-files-release-notes.md
     - name: Microsoft Q&A の Azure Files
-      href: 'https://docs.microsoft.com/answers/topics/azure-files.html'
+      href: /answers/topics/azure-files.html
     - name: Stack Overflow の Azure Files
       href: 'https://stackoverflow.com/questions/tagged/azure-files'
     - name: Azure Files の価格
