--- a/articles/attestation/toc.yml
+++ b/articles/attestation/toc.yml
@@ -11,6 +11,8 @@
       href: quickstart-template.md
     - name: PowerShell
       href: quickstart-powershell.md
+    - name: Azure CLI
+      href: quickstart-azure-cli.md
 - name: チュートリアル
   items:
     - name: 構成証明ポリシーの作成
