--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -208,7 +208,7 @@
 - name: リファレンス (新規)
   items:
     - name: REST API
-      href: 'https://docs.microsoft.com/rest/api/securityinsights/'
+      href: /rest/api/securityinsights/
     - name: ネットワーク正規化スキーマ
       href: normalization-schema.md
 - name: リソース
@@ -218,7 +218,7 @@
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/updates/?updateType=security&category=security&query=sentinel'
     - name: Azure のセキュリティ、プライバシー、およびコンプライアンスのブログ
-      href: 'https://docs.microsoft.com/archive/blogs/azuresecurity/'
+      href: /archive/blogs/azuresecurity/
     - name: リージョン別の提供状況
       href: 'https://azure.microsoft.com/global-infrastructure/services/?products=azure-sentinel'
     - name: 価格
