--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: dnblankedelman
   ms.author: dnb
   ms.date: 02/18/2020
-  ms.openlocfilehash: 1a7fff4aa1978afb1487717e63e21b0b750dc5cc
-  ms.sourcegitcommit: 4cb89d880be26a2a4531fedcc59317471fe729cd
+  ms.openlocfilehash: 5fed24b0c6557fc0f54bf78ac756f2b278863217
+  ms.sourcegitcommit: 8e7316bd4c4991de62ea485adca30065e5b86c67
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/27/2020
-  ms.locfileid: "92676555"
+  ms.lasthandoff: 11/17/2020
+  ms.locfileid: "94660595"
 highlightedContent:
   items:
   - title: SRE の概要:SRE とは (1/3)
@@ -33,15 +33,15 @@ productDirectory:
   - title: 最新の運用方法による信頼性の向上
     imageSrc: ./media/index/video.svg
     links:
-    - url: https://myignite.techcommunity.microsoft.com/sessions/82996
+    - url: https://myignite.microsoft.com/archives/IG19-OPS10
       text: '最新の運用の基礎を構築する: 監視'
-    - url: https://myignite.techcommunity.microsoft.com/sessions/82997
+    - url: https://myignite.microsoft.com/archives/IG19-OPS20
       text: インシデントへの対応
-    - url: https://myignite.techcommunity.microsoft.com/sessions/82998
+    - url: https://myignite.microsoft.com/archives/IG19-OPS30
       text: 失敗から学ぶ
-    - url: https://myignite.techcommunity.microsoft.com/sessions/82999
+    - url: https://myignite.microsoft.com/archives/IG19-OPS40
       text: 信頼性を高めるための展開プラクティス
-    - url: https://myignite.techcommunity.microsoft.com/sessions/83001
+    - url: https://myignite.microsoft.com/archives/IG19-OPS50
       text: '拡張の準備: 容量計画とスケーリング'
   - title: SRE のオンライン コース
     imageSrc: ./media/index/learn.svg
@@ -67,7 +67,7 @@ conceptualContent:
   title: Azure での SRE
   summary: SRE のドキュメント
   items:
-  - title: アーキテクチャ
+  - title: Architecture
     links:
     - url: /azure/architecture/framework/
       itemType: reference
