--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -176,7 +176,7 @@
         - name: P2S セッション管理
           href: p2s-session-management.md
         - name: P2S 用公開 CA ゲートウェイ証明書への移行
-          href: vpn-gateway-point-to-site-gateway-public-ca.md
+          href: ./point-to-site-about.md
         - name: Always On VPN デバイス トンネルの構成
           href: vpn-gateway-howto-always-on-device-tunnel.md
         - name: Always On VPN ユーザー トンネルの構成
@@ -281,7 +281,7 @@
         - name: 複数の S2S 接続の構成
           href: vpn-gateway-multi-site.md
         - name: VPN ゲートウェイの構成
-          href: vpn-gateway-configure-vpn-gateway-mp.md
+          href: ./vpn-gateway-howto-site-to-site-classic-portal.md
         - name: クラシックから Resource Manager への移行
           href: vpn-gateway-classic-resource-manager-migration.md
 - name: リファレンス
@@ -293,7 +293,7 @@
     - name: REST
       href: /rest/api/network/virtualnetworkgateways
     - name: REST (クラシック)
-      href: 'https://msdn.microsoft.com/library/jj154113'
+      href: /previous-versions/azure/reference/jj154113(v=azure.100)
     - name: Azure CLI
       href: /cli/azure/network/vnet-gateway
 - name: リソース
@@ -305,7 +305,7 @@
     - name: ブログ
       href: 'https://azure.microsoft.com/blog/topics/networking'
     - name: Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
+      href: /answers/topics/azure-virtual-network.html
     - name: サブスクリプションとサービスの制限
       href: ../azure-resource-manager/management/azure-subscription-service-limits.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
     - name: 価格
