--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -35,7 +35,7 @@
     - name: JavaScript
       href: search-get-started-javascript.md
     - name: REST
-      href: search-get-started-postman.md
+      href: search-get-started-rest.md
     - name: PowerShell
       href: search-get-started-powershell.md
     - name: Python
@@ -81,13 +81,13 @@
 - name: サンプル
   items:
     - name: C# のサンプル
-      href: /samples/browse/?languages=csharp&products=azure-cognitive-search
+      href: samples-dotnet.md
     - name: Java のサンプル
-      href: /samples/browse/?languages=java&products=azure-cognitive-search
+      href: samples-java.md
     - name: JavaScript のサンプル
-      href: /samples/browse/?languages=javascript&products=azure-cognitive-search
+      href: samples-javascript.md
     - name: Python のサンプル
-      href: /samples/browse/?languages=python&products=azure-cognitive-search
+      href: samples-python.md
     - name: REST サンプル
       href: /samples/browse/?expanded=azure&languages=http&products=azure-cognitive-search
 - name: 概念
