commit translated contents

--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -44,6 +44,8 @@
       href: concepts-identity.md
     - name: ロールベースのアクセス制御
       href: concepts-role-based-access-control.md
+    - name: プライベート クラウドのモニターと修復
+      href: concepts-monitor-repair-private-cloud.md
     - name: プライベート クラウドのアップグレード
       href: concepts-upgrades.md
 - name: 操作方法ガイド
